fixed scrollbar bug

--- a/frontend/style.css
+++ b/frontend/style.css
@@ -3,7 +3,7 @@ body {
     margin: 0;
     text-align: center;
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-    /* overflow: hidden; */
+    overflow: hidden;
     user-select: none;
 }
 
